Renamed demo reel page and other works page. Made mosaic sliding bigger (especially on mobile). Fixed breakdowns for mobile so it fits on screen

--- a/src/App.css
+++ b/src/App.css
@@ -47,7 +47,7 @@ h1, h2, h3, p, .nav-link, .navbar-brand{
   background: url('https://s3-us-west-1.amazonaws.com/gregkalamdaryanbucket2/website_files/Screenshots/Treegrowth.jpg');
 }
 .mosaic-image {
-  width: 300px;
+  width: 20vw;
   height: 400px;
   background-size: cover;
   background-repeat: no-repeat;
@@ -57,6 +57,11 @@ h1, h2, h3, p, .nav-link, .navbar-brand{
 }
 .mosaic-image:hover{
   width: 600px;
+}
+@media (max-width: 500px){
+  .mosaic-image:hover{
+    width: 100vw;
+  }
 }
 .navbar-brand span{
   margin-left: 20px;
@@ -73,6 +78,6 @@ h1, h2, h3, p, .nav-link, .navbar-brand{
   margin-top: -20px;
 }
 .navbar-toggler {
-  background-color: white;
+  background-color: #3681f0!important;
   margin-top: 10px;
 }
